--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,7 @@
+#
+# Copyright 2019 Atri Tripathi. All rights reserved.
+#
+
 #Sat Aug 24 23:35:39 IST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
